--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .app-searh{
-    margin-left: 400px;
-    margin-top: 200px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 20px;
 }
