--- a/src/search-tool.css
+++ b/src/search-tool.css
@@ -1,1 +1,24 @@
 @import '~antd/dist/antd.css';
+
+.home-page {
+    /* background-image: url("./image/backgroud.gif"); */ 
+    background-image: url("./image/backgroud.jpg");
+    background-attachment: fixed;
+    width:100%;
+    height: 100%;
+    position: absolute;
+}
+
+#home-page {
+    text-align: center;
+    position: relative;
+    height: 600px;
+    font-size: 0;
+}
+
+#home-page:after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
